--- a/chicken_files/chicken_tikka.html
+++ b/chicken_files/chicken_tikka.html
@@ -54,7 +54,7 @@
         </div>
     </div>
 
-    <div class="pic">
+    <div class="main_image">
         
         <h1 id="text_product">Chicken Tikka</h1>
         <p id="para"><a href="">Home</a> | <a href="../index_shop.html">Products</a> | Chicken Tikka</p>
