--- a/index_shop.html
+++ b/index_shop.html
@@ -113,7 +113,7 @@
             <h2>Chicken Biryani</h2>
 
             <p id=".border p">Sed ut perspiciatis iste natus ...</p>
-            <span id="price">$4.99</span><br>
+            <span id="price">$7.99</span><br>
             <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
 
@@ -129,24 +129,82 @@
 
 
         </div>
+        </div>
+    </div>
+
+        <!-- Vegetables section -->
+
+
+    <div class="dishes">
+        <h2 id="chicken_text"> Our <span id="span_dishes">Vegetables Dishes</span></h2>
+
+        <div id="trending"><p>Top Trending</p></div>
+    </div>
+
+    <br><br>
+    <div class="chicken">
 
         <div class="border">
-            <div><a href="./chicken_files/Chicken_White_Rice.html"><img src="./assests/chicken dish7.jpg" alt="Chicken White Rice" title="Chicken White Rice"></a></div>
-            <h2>Chicken White Rice</h2>
+            <div><a href="chicken_files/chicken_tikka.html"><img src="./assests/vegetable dish.jpg" alt="chicken" title="Chicken Tikka"></a></div>
+            <h2>Chicken Tikka</h2>
 
             <p id=".border p">Sed ut perspiciatis iste natus ...</p>
-            <span id="price">$9.99</span><br>
+            <span id="price">$9.99</span> <br>
             <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
         </div>
 
         <div class="border">
-            <div><a href="./chicken_files/Chicken_Boti_Salan.html"><img src="./assests/chicken dish8.jpg" alt="Chicken Boti Salan" title="Chicken Boti Salan"></a></div>
-            <h2>Chicken Boti Salan</h2>
+            <div><a href="./chicken_files/Chicken_malai.html"><img src="./assests/chicken dish2.jpg" alt="Chicken Malai Salan" title="Chicken Malai Salan"></a></div>
+            <h2>Chicken Malai Salan</h2>
+
+            <p id=".border p">Sed ut perspiciatis iste natus ...</p>
+            <span id="price">$8.99</span><br>
+            <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
+
+        </div>
+
+        <div class="border">
+            <div><a href="./chicken_files/bihari_boti.html"><img src="./assests/chicken dish3.jpg" alt="Bihari Boti" title="Bihari Boti"></a></div>
+            <h2>Bihari Boti</h2>
+
+            <p id=".border p">Sed ut perspiciatis iste natus ...</p>
+            <span id="price">$6.99</span><br>
+            <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
+
+        </div>
+
+        <div class="border">
+            <div><a href="./chicken_files/Chicken_Karahi.html"><img src="./assests/chicken dish4.jpg" alt="Chicken Karahi" title="Chicken Karahi"></a></div>
+            <h2>Chicken Karahi</h2>
+
+            <p id=".border p">Sed ut perspiciatis iste natus ...</p>
+            <span id="price">$5.99</span><br>
+            <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
+
+        </div>
+
+        <div class="border">
+            <div><a href="chicken_files/Chicken_biryani.html"><img src="./assests/chicken dish5.jpg" alt="Chicken Biryani" title="Chicken Biryani"></a></div>
+            <h2>Chicken Biryani</h2>
 
             <p id=".border p">Sed ut perspiciatis iste natus ...</p>
             <span id="price">$7.99</span><br>
             <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
+
+
+        </div>
+
+        <div class="border">
+            <div><a href="./chicken_files/Chicken_Nuggets.html"><img src="./assests/chicken dish6.jpg" alt="Chicken Nuggets" title="Chicken Nuggets"></a></div>
+            <h2>Chicken Nuggets</h2>
+
+            <p id=".border p">Sed ut perspiciatis iste natus ...</p>
+            <span id="price">$2.99</span><br>
+            <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
+
+
+        </div>
 
            
         </div>
