--- a/index_shop.html
+++ b/index_shop.html
@@ -125,32 +125,32 @@
         <div class="chicken">
 
             <div class="border">
-                <div><a href="chicken_files/chicken_tikka.html"><img src="./assests/anh-nguyen-kcA-c3f_3FE-unsplash.jpg"
-                            alt="chicken" title="Chicken Tikka"></a></div>
+                <div><a href="healthy_files/keto_diet.html"><img src="./assests/anh-nguyen-kcA-c3f_3FE-unsplash.jpg"
+                            alt="Keto diet Food" title="Keto diet Food"></a></div>
                 <h2>Keto diet Food</h2>
 
                 <p id=".border p">Sed ut perspiciatis iste natus ...</p>
-                <span id="price">$9.99</span> <br>
+                <span id="price">$5.99</span> <br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
             </div>
 
             <div class="border">
-                <div><a href="./chicken_files/Chicken_malai.html"><img
+                <div><a href="healthy_files/healthy_meal.html"><img
                             src="./assests/plate-with-keto-diet-food-cherry-tomatoes-chicken-breast-eggs-carrot-salad-with-arugula-spinach-keto-lunch-top-view.jpg"
-                            alt="Chicken Malai Salan" title="Chicken Malai Salan"></a></div>
+                            alt="Healthy Meal" title="Healthy Meal"></a></div>
                 <h2>Healthy Meal</h2>
 
                 <p id=".border p">Sed ut perspiciatis iste natus ...</p>
-                <span id="price">$8.99</span><br>
+                <span id="price">$7.99</span><br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
             </div>
 
             <div class="border">
-                <div><a href="./chicken_files/bihari_boti.html"><img
-                            src="./assests/wesual-click-HK4n3W95F2c-unsplash.jpg" alt="Bihari Boti"
-                            title="Bihari Boti"></a></div>
+                <div><a href="healthy_files/avacado.html"><img
+                            src="./assests/wesual-click-HK4n3W95F2c-unsplash.jpg" alt="Avacado"
+                            title="Avacado"></a></div>
                 <h2>Avacado</h2>
 
                 <p id=".border p">Sed ut perspiciatis iste natus ...</p>
@@ -160,13 +160,13 @@
             </div>
 
             <div class="border">
-                <div><a href="./chicken_files/Chicken_Karahi.html"><img
-                            src="./assests/daniel-arriola-v-UlAEJTSVw-unsplash.jpg" alt="Chicken Karahi"
-                            title="Chicken Karahi"></a></div>
+                <div><a href="healthy_files/healthy_tacos.html"><img
+                            src="./assests/daniel-arriola-v-UlAEJTSVw-unsplash.jpg" alt="Healthy Tacos"
+                            title="Healthy Tacos"></a></div>
                 <h2>Healthy Tacos</h2>
 
                 <p id=".border p">Sed ut perspiciatis iste natus ...</p>
-                <span id="price">$5.99</span><br>
+                <span id="price">$4.99</span><br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
             </div>
@@ -174,33 +174,30 @@
 
 
             <div class="border">
-                <div><a href="./chicken_files/Chicken_Nuggets.html"><img
-                            src="./assests/michael-dagonakis-thR9H6aDmN8-unsplash.jpg" alt="Chicken Nuggets"
-                            title="Chicken Nuggets"></a></div>
+                <div><a href="healthy_files/iridonos.html"><img
+                            src="./assests/michael-dagonakis-thR9H6aDmN8-unsplash.jpg" alt="Iridinos"
+                            title="Iridinos"></a></div>
                 <h2>Iridinos</h2>
 
                 <p id=".border p">Sed ut perspiciatis iste natus ...</p>
-                <span id="price">$2.99</span><br>
+                <span id="price">$8.99</span><br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
 
             </div>
 
             <div class="border">
-                <div><a href="chicken_files/Chicken_biryani.html"><img
-                            src="./assests/seriously-low-carb-FZ4y_IDUJ6w-unsplash.jpg" alt="Chicken Biryani"
-                            title="Chicken Biryani"></a></div>
+                <div><a href="healthy_files/sandwich.html"><img
+                            src="./assests/seriously-low-carb-FZ4y_IDUJ6w-unsplash.jpg" alt="Sandwish"
+                            title="Sandwish"></a></div>
                 <h2>Sandwish</h2>
 
                 <p id=".border p">Sed ut perspiciatis iste natus ...</p>
-                <span id="price">$7.99</span><br>
+                <span id="price">$3.99</span><br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
 
             </div>
-
-
-
 
         </div>
         </div>
