--- a/index_shop.html
+++ b/index_shop.html
@@ -54,7 +54,8 @@
         </div>
     </div>
 
-    <!-- mmmmmm -->
+    <!-- crousel start-->
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -124,16 +125,19 @@
 
         <div class="chicken">
 
+
             <div class="border">
-                <div><a href="healthy_files/keto_diet.html"><img src="./assests/anh-nguyen-kcA-c3f_3FE-unsplash.jpg"
-                            alt="Keto diet Food" title="Keto diet Food"></a></div>
-                <h2>Keto diet Food</h2>
+                <div><a href="healthy_files/avacado.html"><img
+                            src="./assests/wesual-click-HK4n3W95F2c-unsplash.jpg" alt="Avacado"
+                            title="Avacado"></a></div>
+                <h2>Avacado</h2>
 
                 <p id=".border p">Sed ut perspiciatis iste natus ...</p>
-                <span id="price">$5.99</span> <br>
+                <span id="price">$6.99</span><br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
             </div>
+
 
             <div class="border">
                 <div><a href="healthy_files/healthy_meal.html"><img
@@ -147,14 +151,14 @@
 
             </div>
 
+            
             <div class="border">
-                <div><a href="healthy_files/avacado.html"><img
-                            src="./assests/wesual-click-HK4n3W95F2c-unsplash.jpg" alt="Avacado"
-                            title="Avacado"></a></div>
-                <h2>Avacado</h2>
+                <div><a href="healthy_files/keto_diet.html"><img src="./assests/anh-nguyen-kcA-c3f_3FE-unsplash.jpg"
+                            alt="Keto diet Food" title="Keto diet Food"></a></div>
+                <h2>Keto diet Food</h2>
 
                 <p id=".border p">Sed ut perspiciatis iste natus ...</p>
-                <span id="price">$6.99</span><br>
+                <span id="price">$5.99</span> <br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
             </div>
@@ -286,6 +290,23 @@
             </div>
         </div>
         </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     </body>
