--- a/healthy_files/healthy_tacos.html
+++ b/healthy_files/healthy_tacos.html
@@ -18,7 +18,7 @@
     <!-- navbar logo section -->
     <div class="navbar">
 
-        <div class="image"><img src="../assests/logo2.jpg" alt="logo">
+        <div class="image"><img src="../assests/logo_final.png" alt="logo">
             <div class="text">Fitmeal
                 <span>Food Delivery</span>
             </div>
@@ -56,8 +56,8 @@
 
     <div class="Healthy_Tacos_main_image">
         
-        <h1 id="text_product">Healthy Tacos</h1>
-        <p id="para"><a href="">Home</a> | <a href="../index_shop.html">Products</a> | Healthy Tacos</p>
+        <h1 id="product">Healthy Tacos</h1>
+        <p id="para_head"><a href="">Home</a> | <a href="../index_shop.html">Products</a> | Healthy Tacos</p>
     </div>
 
     <br>
