--- a/index_shop.html
+++ b/index_shop.html
@@ -215,7 +215,7 @@
         <div class="chicken">
 
             <div class="border">
-                <div><a href="chicken_files/chicken_tikka.html"><img
+                <div><a href="./seafood_files/Lobster.html"><img
                             src="./assests/katie-musial-TbgRGRSwlNo-unsplash.jpg" alt="Lobster" title="Lobster"></a>
                 </div>
                 <h2>Lobsters</h2>
@@ -227,7 +227,7 @@
             </div>
 
             <div class="border">
-                <div><a href="./chicken_files/Chicken_malai.html"><img
+                <div><a href="./seafood_files/Tuna.html"><img
                             src="./assests/ca-creative-bpPTlXWTOvg-unsplash.jpg" alt="Tuna" title="Tuna"></a></div>
                 <h2>Tuna</h2>
 
@@ -238,7 +238,7 @@
             </div>
 
             <div class="border">
-                <div><a href="./chicken_files/bihari_boti.html"><img
+                <div><a href="./seafood_files/salmon.html"><img
                             src="./assests/viviana-rishe-zf8tA3L5wBc-unsplash.jpg" alt="Salmon" title="Salmon"></a>
                 </div>
                 <h2>Salmon</h2>
@@ -250,7 +250,7 @@
             </div>
 
             <div class="border">
-                <div><a href="./chicken_files/Chicken_Karahi.html"><img
+                <div><a href="./seafood_files/fish.html"><img
                             src="./assests/sebastian-coman-photography-Co-T6odt0es-unsplash.jpg" alt="Fish"
                             title="Fish"></a></div>
                 <h2>Fish</h2>
@@ -262,7 +262,7 @@
             </div>
 
             <div class="border">
-                <div><a href="chicken_files/Chicken_biryani.html"><img src="./assests/vino-li-TqOEGdRNowY-unsplash.jpg"
+                <div><a href="./seafood_files/Shrimps.html"><img src="./assests/vino-li-TqOEGdRNowY-unsplash.jpg"
                             alt="Shrimps" title="Shrimps"></a></div>
                 <h2>Shrimps</h2>
 
@@ -274,7 +274,7 @@
             </div>
 
             <div class="border">
-                <div><a href="./chicken_files/Chicken_Nuggets.html"><img
+                <div><a href="./seafood_files/Scallops.html"><img
                             src="./assests/laura-kennedy-d_zHk8-fdcM-unsplash.jpg" alt="Scallops" title="Scallops"></a>
                 </div>
                 <h2>Scallops</h2>
