--- a/seafood_files/Scallops.html
+++ b/seafood_files/Scallops.html
@@ -5,10 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Exo&display=swap" rel="stylesheet">
-    <title>Chicken Nuggets</title>
+    <title>Scallops</title>
 </head>
 
 <body>
@@ -18,7 +15,7 @@
     <!-- navbar logo section -->
     <div class="navbar">
 
-        <div class="image"><img src="../assests/logo2.jpg" alt="logo">
+        <div class="image"><img src="../assests/logo_final.png" alt="logo">
             <div class="text">Fitmeal
                 <span>Food Delivery</span>
             </div>
@@ -56,8 +53,8 @@
 
     <div class="Scallops_main_image">
         
-        <h1 id="text_product">Scallops</h1>
-        <p id="para"><a href="">Home</a> | <a href="../index_shop.html">Products</a> | Scallops</p>
+        <h1 id="product">Scallops</h1>
+        <p id="para_head"><a href="">Home</a> | <a href="../index_shop.html">Products</a> | Scallops</p>
     </div>
 
     <br>
