--- a/seafood_files/salmon.html
+++ b/seafood_files/salmon.html
@@ -5,10 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Exo&display=swap" rel="stylesheet">
-    <title>Chicken Malai</title>
+    <title>Salmon</title>
 </head>
 
 <body>
@@ -18,7 +15,7 @@
     <!-- navbar logo section -->
     <div class="navbar">
 
-        <div class="image"><img src="../assests/logo2.jpg" alt="logo">
+        <div class="image"><img src="../assests/logo_final.png" alt="logo">
             <div class="text">Fitmeal
                 <span>Food Delivery</span>
             </div>
@@ -54,20 +51,20 @@
         </div>
     </div>
 
-    <div class="Tuna_main_image">
+    <div class="Salmon_main_image">
         
-        <h1 id="text_product">Tuna</h1>
-        <p id="para"><a href="">Home</a> | <a href="../index_shop.html">Products</a> | Tuna</p>
+        <h1 id="product">Salmon</h1>
+        <p id="para_head"><a href="">Home</a> | <a href="../index_shop.html">Products</a> | Salmon</p>
     </div>
 
     <br>
     <div class="chicken_tikka">
 
-        <div id="malai_img"></div>
+        <div id="Bihari_img"></div>
 
 
         <div class="content">
-        <div id="tikka_price"><span>$8.99</span></div>
+        <div id="tikka_price"><span>$6.99</span></div>
 
         <div><p id="tikka_para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem,<br> mollitia aliquam repellat rem natus sapiente nobis eos debitis eligendi, <br> ex deleniti quibusdam facilis tempore non eum illo quisquam provident atque!</p></div><br>
 
