--- a/healthy_files/keto_diet.html
+++ b/healthy_files/keto_diet.html
@@ -69,7 +69,7 @@
         <div class="content">
         <div id="tikka_price"><span>$5.99</span></div>
 
-        <div><p id="tikka_para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem,<br> mollitia aliquam repellat rem natus sapiente nobis eos debitis eligendi, <br> ex deleniti quibusdam facilis tempore non eum illo quisquam provident atque!</p></div><br>
+        <div><p id="tikka_para">Welcome to Kiet Diet Food, where flavor meets wellness! <br> Our restaurant is dedicated to providing delicious and <br> nutritious meals that align with your health goals. <br>At Kiet Diet Food, we believe that eating well should never <br> compromise on taste. Our menu is thoughtfully curated <br> by nutrition experts.</p></div><br>
 
         <div id="cart_button"><button id="Cart"><a href="../index_cart.html">Add to Cart</a></button></div>
     </div>
