--- a/index_shop.html
+++ b/index_shop.html
@@ -82,7 +82,7 @@
                             alt="Avacado" title="Avacado"></a></div>
                 <h2>Avacado</h2>
 
-                <p id=".border p">Sed ut perspiciatis iste natus ...</p>
+                <p id=".border p">Creamy richness of our ripe avocados.</p>
                 <span id="price">$6.99</span><br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
@@ -95,7 +95,7 @@
                             alt="Healthy Meal" title="Healthy Meal"></a></div>
                 <h2>Healthy Meal</h2>
 
-                <p id=".border p">Sed ut perspiciatis iste natus ...</p>
+                <p id=".border p">Savor the goodness of our quinoa salad.</p>
                 <span id="price">$7.99</span><br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
@@ -107,7 +107,7 @@
                             alt="Keto diet Food" title="Keto diet Food"></a></div>
                 <h2>Keto diet Food</h2>
 
-                <p id=".border p">Sed ut perspiciatis iste natus ...</p>
+                <p id=".border p">Indulge in our delectable Kiet diet dish.</p>
                 <span id="price">$5.99</span> <br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
@@ -119,7 +119,7 @@
                             title="Healthy Tacos"></a></div>
                 <h2>Healthy Tacos</h2>
 
-                <p id=".border p">Sed ut perspiciatis iste natus ...</p>
+                <p id=".border p">Savor the flavor in every bite of our tacos.</p>
                 <span id="price">$4.99</span><br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
