--- a/healthy_files/avacado.html
+++ b/healthy_files/avacado.html
@@ -69,7 +69,7 @@
         <div class="content">
         <div id="tikka_price"><span>$6.99</span></div>
 
-        <div><p id="tikka_para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem,<br> mollitia aliquam repellat rem natus sapiente nobis eos debitis eligendi, <br> ex deleniti quibusdam facilis tempore non eum illo quisquam provident atque!</p></div><br>
+        <div><p id="tikka_para">Indulge in the goodness of nature's green treasure at our restaurant, <br> where we celebrate the nourishing benefits and delightful flavors <br> of avocados. Our Avocado Diet Food selection is carefully crafted <br> to tantalize your taste buds while promoting a healthy lifestyle.</p></div><br>
 
         <div id="cart_button"><button id="Cart"><a href="../index_cart.html">Add to Cart</a></button></div>
     </div>
