--- a/healthy_files/healthy_meal.html
+++ b/healthy_files/healthy_meal.html
@@ -69,7 +69,7 @@
         <div class="content">
         <div id="tikka_price"><span>$7.99</span></div>
 
-        <div><p id="tikka_para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem,<br> mollitia aliquam repellat rem natus sapiente nobis eos debitis eligendi, <br> ex deleniti quibusdam facilis tempore non eum illo quisquam provident atque!</p></div><br>
+        <div><p id="tikka_para"> Fill half of your plate with a variety of colorful vegetables <br> like leafy greens, broccoli, carrots, bell peppers, spinach, <br> or tomatoes. Vegetables are rich in fiber, vitamins, and <br> minerals, and they help promote satiety and digestive health.</p></div><br>
 
         <div id="cart_button"><button id="Cart"><a href="../index_cart.html">Add to Cart</a></button></div>
     </div>
