--- a/healthy_files/healthy_tacos.html
+++ b/healthy_files/healthy_tacos.html
@@ -69,7 +69,7 @@
         <div class="content">
         <div id="tikka_price"><span>$4.99</span></div>
 
-        <div><p id="tikka_para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem,<br> mollitia aliquam repellat rem natus sapiente nobis eos debitis eligendi, <br> ex deleniti quibusdam facilis tempore non eum illo quisquam provident atque!</p></div><br>
+        <div><p id="tikka_para">At [FitMeal], we believe in the art of customization. <br> Create your taco masterpiece with our array of <br> toppings and salsas, allowing you to personalize <br> your culinary experience to perfection and the essence <br> of Mexican cuisine through our tantalizing array of tacos. <br> Buen provecho!</p></div><br>
 
         <div id="cart_button"><button id="Cart"><a href="../index_cart.html">Add to Cart</a></button></div>
     </div>
