healthy files changes

--- a/healthy_files/iridonos.html
+++ b/healthy_files/iridonos.html
@@ -4,11 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Exo&display=swap" rel="stylesheet">
-    <title>Bihari Boti</title>
+    <link rel="stylesheet" href="../style.css">
+    <title>Iridinos</title>
 </head>
 
 <body>
@@ -69,7 +67,7 @@
         <div class="content">
         <div id="tikka_price"><span>$8.99</span></div>
 
-        <div><p id="tikka_para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem,<br> mollitia aliquam repellat rem natus sapiente nobis eos debitis eligendi, <br> ex deleniti quibusdam facilis tempore non eum illo quisquam provident atque!</p></div><br>
+        <div><p id="tikka_para">Step into a world where every dish tells a story, <br> where each bite is a journey of culinary delight. At Iridinos,<br>  we believe in the art of cuisine, meticulously crafting each <br> recipe to tantalize your taste buds and ignite your senses.</p></div><br>
 
         <div id="cart_button"><button id="Cart"><a href="../index_cart.html">Add to Cart</a></button></div>
     </div>
