--- a/index_cart.html
+++ b/index_cart.html
@@ -4,59 +4,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Products</title>
+    <title>Cart</title>
 </head>
 <body>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+   <!-- navbar start -->
 
-  <style>
-  /* Make the image fully responsive */
-  .carousel-inner img {
-    width: 100%;
-    height: 100%;
-  }
-  </style>
-</head>
-<body>
+    <!-- navbar logo section -->
+    <div class="forfixing">
+      <div class="navbar">
 
-<div id="demo" class="carousel slide" data-ride="carousel">
-  <ul class="carousel-indicators">
-    <li data-target="#demo" data-slide-to="0" class="active"></li>
-    <li data-target="#demo" data-slide-to="1"></li>
-    <li data-target="#demo" data-slide-to="2"></li>
-  </ul>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="./assests/crispy-tempura-sushi-rolls-served-with-side-soy-sauce.jpg" alt="Los Angeles" width="1100" style="height: 450px;">
-      <div class="carousel-caption">
-        <h1 id="text_product">All Products</h1>
-        <p id="para"><a href="">Home</a> | Products</p>
-      </div>   
-    </div>
-    <div class="carousel-item">
-      <img src="./assests/chicken-skewers-with-slices-sweet-peppers-dill-tasty-food-weekend-meal.jpg" alt="cover2" width="1100"  style="height: 450px;">
-      <div class="carousel-caption">
-        <h1 id="text_product">All Products</h1>
-        <p id="para"><a href="">Home</a> | Products</p>
-      </div>   
-    </div>
-    <div class="carousel-item">
-      <img src="./assests/mexican-tacos-with-beef-tomato-sauce-salsa.jpg" alt="New York" width="1100" style="height: 450px;">
-      <div class="carousel-caption">
-        <h1 id="text_product">All Products</h1>
-        <p id="para"><a href="">Home</a> | Products</p>
-      </div>   
-    </div>
+          <div class="image"><img src="./assests/logo_final.png" alt="logo">
+              <div class="text">Fitmeal
+                  <span id="ss1">Food Delivery</span>
+              </div>
+          </div>
+
+          <!-- navbar pages section -->
+          <div class="dropdown">
+              <button class="dropbtn">Home</button>
+              <div class="dropdown-content">
+                  <a href="#">Food Delivery</a>
+                  <a href="#">Healthy Food</a>
+                  <a href="#">Smoothie Bar</a>
+              </div>
+          </div>
+
+          <div class="dropdown2">
+              <button class="dropbtn2">About Us</button>
+              <div class="dropdown-content2">
+                  <a href="#">Testimonials</a>
+                  <a href="#">Team</a>
+              </div>
+          </div>
+
+          <div class="dropdown3">
+              <button class="dropbtn3">Product</button>
+              <div class="dropdown-content3">
+                  <a href="index_shop.html">Shop</a>
+                  <a href="#">Cart</a>
+              </div>
+          </div>
+          <div class="dropdown3">
+              <button class="dropbtn4">Contact</button>
+          </div>
+
+        
+      </div>
   </div>
-  <a class="carousel-control-prev" href="#demo" data-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </a>
-  <a class="carousel-control-next" href="#demo" data-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </a>
-</div>
+  <!--navbar end-->
+
+  
+  <!-- header -->
+  <div class="pic">
+      <h1 id="product">Cart</h1>
+      <p id="para_head"><a href="#"> Home </a> <a href="./index_shop.html"> | Products </a>| Cart </p>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- footer -->
+  <div class="footer">
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  </div>
+
 </body>
 </html>
