--- a/seafood_files/fish.html
+++ b/seafood_files/fish.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Exo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
     <title>Fish</title>
 </head>
@@ -66,7 +68,7 @@
         <div class="content">
         <div id="tikka_price"><span>$5.99</span></div>
 
-        <div><p id="tikka_para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem,<br> mollitia aliquam repellat rem natus sapiente nobis eos debitis eligendi, <br> ex deleniti quibusdam facilis tempore non eum illo quisquam provident atque!</p></div><br>
+        <div><p id="tikka_para">Delight in the daily selection of our freshest catch, sourced <br> directly from local fishermen and coastal suppliers. Our chefs  <br> expertly prepare each fish to perfection, ensuring that its natural <br> flavors shine through in every mouthwatering bite. ensuring that <br> every bite is a testament to the ocean's finest offerings.</p></div><br>
 
         <div id="cart_button"><button id="Cart"><a href="../index_cart.html">Add to Cart</a></button></div>
     </div>
