--- a/healthy_files/sandwich.html
+++ b/healthy_files/sandwich.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Exo&display=swap" rel="stylesheet">
-    <title>Bihari Boti</title>
+    <title>Sandwich</title>
 </head>
 
 <body>
@@ -69,7 +69,7 @@
         <div class="content">
         <div id="tikka_price"><span>$3.99</span></div>
 
-        <div><p id="tikka_para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem,<br> mollitia aliquam repellat rem natus sapiente nobis eos debitis eligendi, <br> ex deleniti quibusdam facilis tempore non eum illo quisquam provident atque!</p></div><br>
+        <div><p id="tikka_para">Welcome to our sandwich haven! At [Featmeal], <br> we take pride in crafting the most delectable and satisfying sandwiches <br>  to tantalize your taste buds. From classic combinations to innovative creations, <br> each bite promises a burst of flavors that will keep you coming back for more. <br> Crispy bacon, fresh lettuce, and juicy tomato slices, layered between slices <br> of toasted bread and finished with creamy mayonnaise.</p></div><br>
 
         <div id="cart_button"><button id="Cart"><a href="../index_cart.html">Add to Cart</a></button></div>
     </div>
