--- a/index_shop.html
+++ b/index_shop.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="style.css">
     <title>Products</title>
 </head>
-
 <body>
     <!-- navbar start -->
 
@@ -43,7 +43,7 @@
                 <button class="dropbtn3">Product</button>
                 <div class="dropdown-content3">
                     <a href="#">Shop</a>
-                    <a href="#">Cart</a>
+                    <a href="index_cart.html">Cart</a>
                 </div>
             </div>
             <div class="dropdown3">
@@ -83,7 +83,7 @@
                 <h2>Avacado</h2>
 
                 <p id=".border p">Creamy richness of our ripe avocados.</p>
-                <span id="price">$6.99</span><br>
+                <span id="price">Rs. 380</span><br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
             </div>
@@ -96,7 +96,7 @@
                 <h2>Healthy Meal</h2>
 
                 <p id=".border p">Savor the goodness of our quinoa salad.</p>
-                <span id="price">$7.99</span><br>
+                <span id="price">Rs. 450</span><br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
             </div>
@@ -108,7 +108,7 @@
                 <h2>Keto diet Food</h2>
 
                 <p id=".border p">Indulge in our delectable Kiet diet dish.</p>
-                <span id="price">$5.99</span> <br>
+                <span id="price">Rs. 599</span> <br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
             </div>
@@ -120,7 +120,7 @@
                 <h2>Healthy Tacos</h2>
 
                 <p id=".border p">Savor the flavor in every bite of our tacos.</p>
-                <span id="price">$4.99</span><br>
+                <span id="price">Rs. 550</span><br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
             </div>
@@ -133,8 +133,8 @@
                             title="Iridinos"></a></div>
                 <h2>Iridinos</h2>
 
-                <p id=".border p">Sed ut perspiciatis iste natus ...</p>
-                <span id="price">$8.99</span><br>
+                <p id=".border p">Mesmerizing flavors of Iridinos.</p>
+                <span id="price">Rs. 520</span><br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
 
@@ -146,8 +146,8 @@
                             title="Sandwish"></a></div>
                 <h2>Sandwish</h2>
 
-                <p id=".border p">Sed ut perspiciatis iste natus ...</p>
-                <span id="price">$3.99</span><br>
+                <p id=".border p">Bold flavors of our signature sandwiches.</p>
+                <span id="price">Rs. 450</span><br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
 
@@ -220,8 +220,8 @@
                 </div>
                 <h2>Lobsters</h2>
 
-                <p id=".border p">Sed ut perspiciatis iste natus ...</p>
-                <span id="price">$9.99</span> <br>
+                <p id=".border p">Indulge in the taste of succulent lobster.</p>
+                <span id="price">Rs. 999</span> <br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
             </div>
@@ -231,8 +231,8 @@
                             src="./assests/ca-creative-bpPTlXWTOvg-unsplash.jpg" alt="Tuna" title="Tuna"></a></div>
                 <h2>Tuna</h2>
 
-                <p id=".border p">Sed ut perspiciatis iste natus ...</p>
-                <span id="price">$8.99</span><br>
+                <p id=".border p"> Exquisite flavors of our freshly caught tuna.</p>
+                <span id="price">Rs. 799</span><br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
             </div>
@@ -243,8 +243,8 @@
                 </div>
                 <h2>Salmon</h2>
 
-                <p id=".border p">Sed ut perspiciatis iste natus ...</p>
-                <span id="price">$6.99</span><br>
+                <p id=".border p">Perfectly grilled salmon to culinary.</p>
+                <span id="price">Rs. 899</span><br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
             </div>
@@ -255,8 +255,8 @@
                             title="Fish"></a></div>
                 <h2>Fish</h2>
 
-                <p id=".border p">Sed ut perspiciatis iste natus ...</p>
-                <span id="price">$5.99</span><br>
+                <p id=".border p">Dive into a sea of flavor with our fish.</p>
+                <span id="price">Rs. 699</span><br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
             </div>
@@ -266,8 +266,8 @@
                             alt="Shrimps" title="Shrimps"></a></div>
                 <h2>Shrimps</h2>
 
-                <p id=".border p">Sed ut perspiciatis iste natus ...</p>
-                <span id="price">$7.99</span><br>
+                <p id=".border p">Delight your taste buds with our shrimp.</p>
+                <span id="price">Rs. 899</span><br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
 
@@ -279,8 +279,8 @@
                 </div>
                 <h2>Scallops</h2>
 
-                <p id=".border p">Sed ut perspiciatis iste natus ...</p>
-                <span id="price">$2.99</span><br>
+                <p id=".border p">Succulent scallops, prepared to tantalize.</p>
+                <span id="price">Rs. 599</span><br>
                 <button id="Cart"><a href="index_cart.html">Add to Cart</a></button>
 
 
