--- a/seafood_files/Scallops.html
+++ b/seafood_files/Scallops.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Exo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
     <title>Scallops</title>
 </head>
@@ -66,7 +68,7 @@
         <div class="content">
         <div id="tikka_price"><span>$2.99</span></div>
 
-        <div><p id="tikka_para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem,<br> mollitia aliquam repellat rem natus sapiente nobis eos debitis eligendi, <br> ex deleniti quibusdam facilis tempore non eum illo quisquam provident atque!</p></div><br>
+        <div><p id="tikka_para">Prepared with precision and care by our skilled chefs, our scallops, <br> pan-seared to golden perfection, grilled to impart a subtle smokiness, <br> or served raw for a refreshing twist, each dish showcases the unparalleled <br> taste and versatility From classic scallop ceviche to decadent scallop risotto. <br> bringing you a dining experience that you can feel good about.</p></div><br>
 
         <div id="cart_button"><button id="Cart"><a href="../index_cart.html">Add to Cart</a></button></div>
     </div>
