--- a/seafood_files/Shrimps.html
+++ b/seafood_files/Shrimps.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Exo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
     <title>Shrimps</title>
 </head>
@@ -66,7 +68,7 @@
         <div class="content">
         <div id="tikka_price"><span>$7.99</span></div>
 
-        <div><p id="tikka_para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem,<br> mollitia aliquam repellat rem natus sapiente nobis eos debitis eligendi, <br> ex deleniti quibusdam facilis tempore non eum illo quisquam provident atque!</p></div><br>
+        <div><p id="tikka_para">Our commitment to quality starts with selecting only the finest, <br> freshest shrimps available.Each bite promises a burst of oceanic <br>  freshness, delivering an unparalleled dining experience every time.<br> dining experience every time. sourced from pristine waters and <br> expertly prepared to perfection.</p></div><br>
 
         <div id="cart_button"><button id="Cart"><a href="../index_cart.html">Add to Cart</a></button></div>
     </div>
