--- a/seafood_files/Tuna.html
+++ b/seafood_files/Tuna.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Exo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
     <title>Tuna</title>
 </head>
@@ -66,7 +68,7 @@
         <div class="content">
         <div id="tikka_price"><span>$8.99</span></div>
 
-        <div><p id="tikka_para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem,<br> mollitia aliquam repellat rem natus sapiente nobis eos debitis eligendi, <br> ex deleniti quibusdam facilis tempore non eum illo quisquam provident atque!</p></div><br>
+        <div><p id="tikka_para">Experience the perfect balance of tenderness and flavor with our seared<br>  tuna steak. Cooked to perfection, each bite offers a succulent sensation<br> that will tantalize your taste buds. Indulge in the pure essence of tuna<br> with our expertly sliced sashimi. Served with a delicate drizzle of soy <br> sauce and wasabi, each slice melts in your mouth, leaving you craving more. </p></div><br>
 
         <div id="cart_button"><button id="Cart"><a href="../index_cart.html">Add to Cart</a></button></div>
     </div>
