--- a/seafood_files/salmon.html
+++ b/seafood_files/salmon.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Exo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
     <title>Salmon</title>
 </head>
@@ -66,7 +68,7 @@
         <div class="content">
         <div id="tikka_price"><span>$6.99</span></div>
 
-        <div><p id="tikka_para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem,<br> mollitia aliquam repellat rem natus sapiente nobis eos debitis eligendi, <br> ex deleniti quibusdam facilis tempore non eum illo quisquam provident atque!</p></div><br>
+        <div><p id="tikka_para">Indulge in our signature Grilled Salmon, expertly seasoned and cooked <br> to perfection, offering a tantalizing blend of smoky aromas and melt-in-your <br> mouth tenderness. For those craving a taste of the sea with a twist, try our<br>  Salmon Teriyaki, a harmonious fusion of sweet and savory flavors that dance <br> on your taste buds. Our succulent salmon offerings are no exception.</p></div><br>
 
         <div id="cart_button"><button id="Cart"><a href="../index_cart.html">Add to Cart</a></button></div>
     </div>
