--- a/healthy_files/iridonos.html
+++ b/healthy_files/iridonos.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Exo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
     <title>Iridinos</title>
 </head>
@@ -65,7 +66,7 @@
 
 
         <div class="content">
-        <div id="tikka_price"><span>$8.99</span></div>
+        <div id="tikka_price"><span>Rs. 520</span></div>
 
         <div><p id="tikka_para">Step into a world where every dish tells a story, <br> where each bite is a journey of culinary delight. At Iridinos,<br>  we believe in the art of cuisine, meticulously crafting each <br> recipe to tantalize your taste buds and ignite your senses.</p></div><br>
 
