--- a/healthy_files/keto_diet.html
+++ b/healthy_files/keto_diet.html
@@ -66,7 +66,7 @@
 
 
         <div class="content">
-        <div id="tikka_price"><span>$5.99</span></div>
+        <div id="tikka_price"><span>Rs.599</span></div>
 
         <div><p id="tikka_para">Welcome to Kiet Diet Food, where flavor meets wellness! <br> Our restaurant is dedicated to providing delicious and <br> nutritious meals that align with your health goals. <br>At Kiet Diet Food, we believe that eating well should never <br> compromise on taste. Our menu is thoughtfully curated <br> by nutrition experts.</p></div><br>
 
