--- a/seafood_files/Scallops.html
+++ b/seafood_files/Scallops.html
@@ -66,7 +66,7 @@
 
 
         <div class="content">
-        <div id="tikka_price"><span>$2.99</span></div>
+        <div id="tikka_price"><span>Rs. 599</span></div>
 
         <div><p id="tikka_para">Prepared with precision and care by our skilled chefs, our scallops, <br> pan-seared to golden perfection, grilled to impart a subtle smokiness, <br> or served raw for a refreshing twist, each dish showcases the unparalleled <br> taste and versatility From classic scallop ceviche to decadent scallop risotto. <br> bringing you a dining experience that you can feel good about.</p></div><br>
 
