--- a/seafood_files/Shrimps.html
+++ b/seafood_files/Shrimps.html
@@ -66,7 +66,7 @@
 
 
         <div class="content">
-        <div id="tikka_price"><span>$7.99</span></div>
+        <div id="tikka_price"><span>Rs. 899</span></div>
 
         <div><p id="tikka_para">Our commitment to quality starts with selecting only the finest, <br> freshest shrimps available.Each bite promises a burst of oceanic <br>  freshness, delivering an unparalleled dining experience every time.<br> dining experience every time. sourced from pristine waters and <br> expertly prepared to perfection.</p></div><br>
 
