--- a/seafood_files/Tuna.html
+++ b/seafood_files/Tuna.html
@@ -66,7 +66,7 @@
 
 
         <div class="content">
-        <div id="tikka_price"><span>$8.99</span></div>
+        <div id="tikka_price"><span>Rs. 799</span></div>
 
         <div><p id="tikka_para">Experience the perfect balance of tenderness and flavor with our seared<br>  tuna steak. Cooked to perfection, each bite offers a succulent sensation<br> that will tantalize your taste buds. Indulge in the pure essence of tuna<br> with our expertly sliced sashimi. Served with a delicate drizzle of soy <br> sauce and wasabi, each slice melts in your mouth, leaving you craving more. </p></div><br>
 
