--- a/seafood_files/fish.html
+++ b/seafood_files/fish.html
@@ -66,7 +66,7 @@
 
 
         <div class="content">
-        <div id="tikka_price"><span>$5.99</span></div>
+        <div id="tikka_price"><span>Rs. 699</span></div>
 
         <div><p id="tikka_para">Delight in the daily selection of our freshest catch, sourced <br> directly from local fishermen and coastal suppliers. Our chefs  <br> expertly prepare each fish to perfection, ensuring that its natural <br> flavors shine through in every mouthwatering bite. ensuring that <br> every bite is a testament to the ocean's finest offerings.</p></div><br>
 
