--- a/seafood_files/salmon.html
+++ b/seafood_files/salmon.html
@@ -66,7 +66,7 @@
 
 
         <div class="content">
-        <div id="tikka_price"><span>$6.99</span></div>
+        <div id="tikka_price"><span>Rs. 899</span></div>
 
         <div><p id="tikka_para">Indulge in our signature Grilled Salmon, expertly seasoned and cooked <br> to perfection, offering a tantalizing blend of smoky aromas and melt-in-your <br> mouth tenderness. For those craving a taste of the sea with a twist, try our<br>  Salmon Teriyaki, a harmonious fusion of sweet and savory flavors that dance <br> on your taste buds. Our succulent salmon offerings are no exception.</p></div><br>
 
