--- a/healthy_files/avacado.html
+++ b/healthy_files/avacado.html
@@ -66,7 +66,7 @@
 
 
         <div class="content">
-        <div id="tikka_price"><span>$6.99</span></div>
+        <div id="tikka_price"><span>Rs. 380</span></div>
 
         <div><p id="tikka_para">Indulge in the goodness of nature's green treasure at our restaurant, <br> where we celebrate the nourishing benefits and delightful flavors <br> of avocados. Our Avocado Diet Food selection is carefully crafted <br> to tantalize your taste buds while promoting a healthy lifestyle.</p></div><br>
 
