--- a/healthy_files/healthy_meal.html
+++ b/healthy_files/healthy_meal.html
@@ -66,7 +66,7 @@
 
 
         <div class="content">
-        <div id="tikka_price"><span>$7.99</span></div>
+        <div id="tikka_price"><span>Rs. 450</span></div>
 
         <div><p id="tikka_para"> Fill half of your plate with a variety of colorful vegetables <br> like leafy greens, broccoli, carrots, bell peppers, spinach, <br> or tomatoes. Vegetables are rich in fiber, vitamins, and <br> minerals, and they help promote satiety and digestive health.</p></div><br>
 
