--- a/healthy_files/healthy_tacos.html
+++ b/healthy_files/healthy_tacos.html
@@ -66,7 +66,7 @@
 
 
         <div class="content">
-        <div id="tikka_price"><span>$4.99</span></div>
+        <div id="tikka_price"><span>Rs. 550</span></div>
 
         <div><p id="tikka_para">At [FitMeal], we believe in the art of customization. <br> Create your taco masterpiece with our array of <br> toppings and salsas, allowing you to personalize <br> your culinary experience to perfection and the essence <br> of Mexican cuisine through our tantalizing array of tacos. <br> Buen provecho!</p></div><br>
 
