--- a/healthy_files/sandwich.html
+++ b/healthy_files/sandwich.html
@@ -67,7 +67,7 @@
 
 
         <div class="content">
-        <div id="tikka_price"><span>$3.99</span></div>
+        <div id="tikka_price"><span>Rs. 450</span></div>
 
         <div><p id="tikka_para">Welcome to our sandwich haven! At [Featmeal], <br> we take pride in crafting the most delectable and satisfying sandwiches <br>  to tantalize your taste buds. From classic combinations to innovative creations, <br> each bite promises a burst of flavors that will keep you coming back for more. <br> Crispy bacon, fresh lettuce, and juicy tomato slices, layered between slices <br> of toasted bread and finished with creamy mayonnaise.</p></div><br>
 
