--- a/seafood_files/Lobster.html
+++ b/seafood_files/Lobster.html
@@ -66,7 +66,7 @@
 
 
         <div class="content">
-        <div id="tikka_price"><span>$9.99</span></div>
+        <div id="tikka_price"><span>Rs. 999</span></div>
 
         <div><p id="tikka_para">From classic lobster bisque to decadent lobster mac and cheese, <br> mour menu features an array of delectable options showcasing the <br> versatility of this oceanic treasure. Indulge in the buttery richness of <br>  a traditional lobster roll or savor the complexity of flavors in our lobster <br> risotto, prepared to tantalize your taste buds and delight your senses.</p></div><br>
 
