--- a/contact.html
+++ b/contact.html
@@ -46,13 +46,15 @@
             <div class="dropdown3">
                 <button class="dropbtn3">Product</button>
                 <div class="dropdown-content3">
-                    <a href="#">Shop</a>
+                    <a href="index_shop.html">Shop</a>
                     <a href="index_cart.html">Cart</a>
                 </div>
             </div>
             <div class="dropdown3">
-                <button class="dropbtn4">Contact</button>
+                <button class="dropbtn4"><a href="#">Contact</a></button>
             </div>
+
+
 
 
         </div>
