--- a/index_cart.html
+++ b/index_cart.html
@@ -51,8 +51,9 @@
                 </div>
             </div>
             <div class="dropdown3">
-                <button class="dropbtn4">Contact</button>
+                <button class="dropbtn4"><a href="contact.html">Contact</a></button>
             </div>
+
 
 
         </div>
@@ -120,7 +121,7 @@
 
                     <a href="#"><i id="icon" class="fa-solid fa-caret-right"></i> Client </a>
 
-                    <a href="#"><i id="icon" class="fa-solid fa-caret-right"></i> Contact Us</a>
+                    <a href="contact.html"><i id="icon" class="fa-solid fa-caret-right"></i> Contact Us</a>
 
 
                 </div>
