--- a/index_shop.html
+++ b/index_shop.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="dropdown3">
-                <button class="dropbtn4">Contact</button>
+                <button class="dropbtn4"><a href="contact.html">Contact</a></button>
             </div>
 
 
@@ -326,7 +326,7 @@
 
                     <a href="#"><i id="icon" class="fa-solid fa-caret-right"></i> Client </a>
 
-                    <a href="#"><i id="icon" class="fa-solid fa-caret-right"></i> Contact Us</a>
+                    <a href="./contact.html"><i id="icon" class="fa-solid fa-caret-right"></i> Contact Us</a>
 
 
                 </div>
