--- a/seafood_files/Scallops.html
+++ b/seafood_files/Scallops.html
@@ -51,8 +51,10 @@
             </div>
         </div>
         <div class="dropdown3">
-            <button class="dropbtn4">Contact</button>
+            <button class="dropbtn4"><a href="../contact.html">Contact</a></button>
         </div>
+
+
     </div>
 
     <div class="Scallops_main_image">
@@ -117,11 +119,11 @@
 
                     <a href="#" id="Home"><i id="icon" class="fa-solid fa-caret-right"></i> Home </a>
 
-                    <a href="./index_shop.html"><i id="icon" class="fa-solid fa-caret-right"></i> Products </a>
+                    <a href="../index_shop.html"><i id="icon" class="fa-solid fa-caret-right"></i> Products </a>
 
                     <a href="#"><i id="icon" class="fa-solid fa-caret-right"></i> Client </a>
 
-                    <a href="#"><i id="icon" class="fa-solid fa-caret-right"></i> Contact Us</a>
+                    <a href="../contact.html"><i id="icon" class="fa-solid fa-caret-right"></i> Contact Us</a>
 
 
                 </div>
